# DepoScope

./: .gitignore  Deposcope_Colab.ipynb  LICENSE  README.md  deposcope-predict.py  pyproject.toml
Benchmark/: 7.PT1_Foldseek_job_FN.ipynb
Data/: Phagedepo.Dataset.21032024.tsv  remove_benchmark.fasta
Data_Collection/: 3.PT2_Scan_MSA_candidates.ipynb  4.PT4_Foldseek_job_CAZY.ipynb  4.PT5_Foldseek_job_PD_fold_DB.ipynb  5.PT2_Foldseek_Protein_Units.ipynb  5.PT3_PD_Protein_Units.ipynb
Evaluation/: XX.Metrics_clustered_model.review.ipynb
Other/: Untitled.ipynb  XX.Metrics_clustered_model.review.ipynb  XX.Metrics_clustered_model.review_v1.ipynb  XX.Save_Chimerax.ipynb
Training/: 1.1.PT1_esm2_FineTuning_Token_class_review_server.ipynb  1.1.PT2_CNV_binary_class_review_server.ipynb  1.PT1_esm2_FineTuning_Token_class_review_server.ipynb  1.PT2_CNV_binary_class_review_server.ipynb  2.PT1_esm2_FineTuning_Token_class_review_server_fulltrain.ipynb  2.PT2_CNV_binary_class_review_server_full.ipynb  3.DepoScope_full.ipynb  5.PT1_Benchmarking_review.ipynb  6.PT1_Foldseek_job_FP.ipynb  7.PT2_Benchmarking_FN.ipynb  IX.Foldseek_job_FP.ipynb  PR_curves.ipynb  Triple_helix.data.2103.tsv  VI.PT1_esm2_FineTuning_Token_class.ipynb  VI.PT1_esm2_FineTuning_Token_class_review.ipynb  VI.PT1_esm2_FineTuning_Token_class_review_ground.ipynb  VI.PT1_esm2_FineTuning_Token_class_server.ipynb  VI.PT2_CNV_binary_class.ipynb  VI.PT2_CNV_binary_classv3.ipynb  VII.DepoScope.ipynb  VIII.Evaluation_Model_Classifier.ipynb  VIII.PT3_Benchmarking_ESMfold_FP.ipynb  VIII.PT3_Benchmarking_FP.ipynb  (+5 more)
(+580 files in other folders)
